--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 </div>
                 <div class="team-member">
                     <div class="member-avatar">
-                        <img src="n3rdium.webp" alt="n3rdium - The Backend Wizard">
+                        <img src="https://avatars.githubusercontent.com/u/74598401?v=4" alt="42">
                     </div>
                     <h3 class="member-name">n3rdium</h3>
                     <p class="member-role">Backend Wizard</p>
